--- a/adapters/rails_tiny_ds/Rakefile
+++ b/adapters/rails_tiny_ds/Rakefile
@@ -15,7 +15,8 @@ spec = Gem::Specification.new do |s|
       "ActiveRecord method calls for Rails #{RAILS_VERSION} generated scaffold"
   s.authors = ["John Woodell", "Takeru Sasaki"]
   s.email = ["woodie@netpress.com", "sasaki.takeru@gmail.com"]
-  s.homepage = "http://github.com/takeru/tiny_ds/adapters/rails_tiny_ds"
+  s.homepage = "http://github.com/takeru/tiny_ds/" +
+      "tree/master/adapters/rails_tiny_ds"
   s.require_path = 'lib'
   s.files = %w(LICENSE README.rdoc Rakefile) +
             Dir.glob("generators/**/*") + Dir.glob("lib/**/*") 
