--- a/examples/dsbench/Gemfile
+++ b/examples/dsbench/Gemfile
@@ -4,7 +4,8 @@ disable_rubygems
 bundle_path ".gems/bundler_gems"
 
 # List gems to bundle here:
-gem "tiny_ds", "0.0.3.pre"
+##gem "tiny_ds", "0.0.3.pre"
 gem "sinatra"
 gem "json-jruby"
-
+gem "appengine-apis"
+gem "appengine-rack"
